Implement review suggestions